@@ -1,3 +1,12 @@
+2013-03-17  Werner Lemberg  <wl@gnu.org>
+
+	[ftview] Remove option -D.
+
+	This no longer works because the used cache values are now internal.
+
+	* src/ftview.c (status): Remove `dump_cache_stats'.
+	(usage, parse_cmdline, main): Updated.
+
 2013-02-16  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
         [ftbench] Make BBox test harder.
